@@ -1,3 +1,8 @@
+2007-08-11  Arno Rehn  <arno@arnorehn.de>
+
+	* Check for a GCHandle being zero before freeing it.
+	* Added implicit type conversions for QUrl.
+
 2007-08-09  Richard Dale  <rdale@foton.es>
 
 	* Added some missing implicit type conversions to better match 
